k8s/base/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: petswipe-backend
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: petswipe-backend
  ports:
    - name: http
      port: 5001
      targetPort: http
